crates/hwp-core/tests/snapshots/snapshot_tests__borderfill_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07




<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>



<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
</table>
